--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
+.vscode/
+.cursor/
+.cursorrules
+.env
+
 # dependencies
 node_modules/
 
