--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,8 +24,8 @@
         <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
-        <data android:scheme="microapp"/>
-        <data android:scheme="exp+micro-app"/>
+        <data android:scheme="myapp"/>
+        <data android:scheme="exp+microapp"/>
       </intent-filter>
     </activity>
   </application>
