--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "migrate": "npx tsx ./scripts/migrate.ts",
+    "seed": "npx tsx ./scripts/seed.ts",
+    "seed:clear": "npx tsx ./scripts/seed.ts --clear"
   },
   "dependencies": {
+    "@dr.pogodin/react-native-fs": "^2.33.1",
+    "@dr.pogodin/react-native-static-server": "^0.21.0",
     "@expo/vector-icons": "^14.1.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
@@ -24,6 +29,7 @@
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
     "expo-dev-client": "~5.2.0",
+    "expo-file-system": "^18.1.10",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.0",
@@ -42,19 +48,23 @@
     "react-native": "0.79.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
+    "react-native-webview": "^13.15.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "dotenv": "^16.4.5",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "tailwindcss": "^3.4.17",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.7.1",
     "typescript": "~5.8.3"
   },
   "private": true
