--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@dr.pogodin/react-native-fs": "^2.33.1",
     "@dr.pogodin/react-native-static-server": "^0.21.0",
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@roninoss/icons": "^0.0.4",
     "@shopify/flash-list": "1.7.6",
     "@supabase/supabase-js": "^2.50.0",
+    "@webview-bridge/react-native": "^1.7.7",
+    "@webview-bridge/web": "^1.7.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "~53.0.11",
